--- a/floreantpos/FloreantAndroid/res/layout/orderscreenlayout.xml
+++ b/floreantpos/FloreantAndroid/res/layout/orderscreenlayout.xml
@@ -8,7 +8,7 @@
             <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:layout_gravity="center" android:id="@+id/Beverages" android:text="@string/beverages"></Button>
         </TableRow>
         <TableRow android:layout_width="wrap_content" android:id="@+id/tableRow4" android:layout_height="wrap_content">
-            <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:layout_gravity="center" android:id="@+id/Breakfast" android:text="@string/breakfast"></Button>
+            <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:layout_gravity="center" android:text="@string/breakfast" android:id="@+id/Breakfast"></Button>
         </TableRow>
         <TableRow android:layout_width="wrap_content" android:id="@+id/tableRow4" android:layout_height="wrap_content">
             <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:layout_gravity="center" android:id="@+id/Lunch" android:text="@string/lunch"></Button>
