--- a/floreantpos/FloreantAndroid/res/layout/tablescreenlayout.xml
+++ b/floreantpos/FloreantAndroid/res/layout/tablescreenlayout.xml
@@ -2,11 +2,12 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
-  android:layout_height="fill_parent" android:background="@color/Blue" android:orientation="vertical">
+  android:layout_height="fill_parent" android:background="@color/Blue" android:orientation="vertical" android:id="@+id/Refresh">
     <TableLayout android:layout_height="wrap_content" android:id="@+id/tableLayout1" android:layout_width="match_parent">
         <Button android:id="@+id/MenuButton" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/viewmenu"></Button>
         <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/PersonalBill" android:text="@string/personalbill"></Button>
         <Button android:id="@+id/GroupBill" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/groupbill"></Button>
+        <Button android:text="Refresh" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/refresh"></Button>
         <TextView android:id="@+id/Members" android:text="@string/tablemembers"/>
     	<TextView android:id="@+id/Total" android:text="@string/total" android:layout_alignParentRight="true" android:gravity="right|center"/>
     </TableLayout>
