--- a/floreantpos/FloreantAndroid/res/layout/groupbilllayout.xml
+++ b/floreantpos/FloreantAndroid/res/layout/groupbilllayout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
-  android:layout_height="fill_parent" android:gravity="right">
+  android:layout_height="wrap_content" android:gravity="right">
   
     
     <ListView
