--- a/floreantpos/FloreantAndroid/res/layout/personalbilllayout.xml
+++ b/floreantpos/FloreantAndroid/res/layout/personalbilllayout.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent">
-    <RatingBar android:id="@+id/ratingBar1" android:layout_width="wrap_content" android:layout_height="wrap_content"></RatingBar>
-</LinearLayout>
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent" android:gravity="right">
+  
+    
+    <ListView
+    	android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:id="@+id/personallist" android:divider="#000" />
+     <TextView android:id="@+id/personaltotal" android:text="TextView" android:layout_alignParentBottom="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:gravity="right|center"></TextView>
+    	
+    
+    	
+</RelativeLayout>
